improve correct contrast

--- a/src/themes/gold.module.css
+++ b/src/themes/gold.module.css
@@ -20,7 +20,7 @@
     --on-secondary: #12100b;
 
     /* Game Status */
-    --correct: #f9d71c;
+    --correct: #ccb43a;
     --correct-border: #aa8a15;
     --incorrect: #7a6210;
     --incorrect-border: #3d3108;
